--- a/src/design-blocks/style.css
+++ b/src/design-blocks/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 /* Reduce the width and height of blocks */
 .blocklyBlock {
     width: 20px;
