--- a/src/design-blocks/style.css
+++ b/src/design-blocks/style.css
@@ -1,3 +1,5 @@
+/* MILESTONE 1 FILE */
+
 * {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
