Adding README.md for prototype

--- a/prototype/style.css
+++ b/prototype/style.css
@@ -1,4 +1,4 @@
-/* MILESTONE 1 FILE */
+/* PROTOTYPE FILE */
 
 * {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
