--- a/src/design-blocks/style.css
+++ b/src/design-blocks/style.css
@@ -1,40 +1,60 @@
-/* MILESTONE 1 FILE */
-
-* {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
-/* Reduce the width and height of blocks */
-.blocklyBlock {
-    width: 20px;
-    height: 10px;
+.container {
+    display: flex;
+    height: 100%;
 }
 
-/* Adjust text size and padding */
-.blocklyText {
-    font-size: 12px;
-    padding: 3px;
-}
-#rCodeDisplay {
-    white-space: pre-line;
-    padding-top: 0; /* Reset padding */
-    margin-top: -0.5em; /* Reset margin */
+.left {
+    width: 66.66%;
+    background-color: #f0f0f0;
 }
 
-.code-line {
-    margin-top: 0.2em; /* Adjust margin as needed to separate code lines */
-    padding-top: 0; /* Reset padding */
+.right {
+    width: 33.33%;
+    display: flex;
+    flex-direction: column;
 }
 
-/* Style for buttons */
-.action-button {
-    position: absolute;
-    bottom: 20px;
+.box {
+    border: 3px solid #000;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 10px;
+    background-color: #fff;
+    flex-grow: 1;
+    box-sizing: border-box;
 }
 
-/* Adjust Blockly workspace width */
-.custom-blockly {
-    flex: 3;
-    width: 60%; /* Set the workspace width to 75% of the screen */
-    height: 90%; /* Adjusted height to fill most of the right half */
+.button-container {
+    display: flex;
+    justify-content: space-between;
+}
+.button {
+    background-color: rgb(10,132,255);
+    color: #fff;
+    border: none;
+    padding: 8px 16px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 10px;
+    margin: 5px;
+    width: 100%;
+    padding: 10px;
+    font-weight: bold;
+}
+
+.button:hover {
+    background-color: rgb(5, 112, 255);
+}
+
+.button:active {
+    background-color: rgb(10, 94, 172);
 }
