Added save and load block functionality and instructions for viewing

--- a/src/design-blocks/style.css
+++ b/src/design-blocks/style.css
@@ -62,3 +62,29 @@ body, html {
 .button:active {
     background-color: rgb(10, 94, 172);
 }
+
+/* Styling for the popup */
+.popup-container {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 50%;
+    max-height: 50%;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 100px rgba(0, 0, 0, 0.9);
+    background-color: beige;
+    z-index: 9999;
+  }
+  .popup-content {
+    position: relative;
+  }
+  .close-btn {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    cursor: pointer;
+    font-weight: bold;
+  }
